# FTL

./: AUTHORS  CMakeLists.txt  GenIssue.txt  LICENSE  README.md  TODO.md
data/: spritesUrl.txt
data/ftl/music/: ObservingTheStar.mmpz  ObservingTheStar.mmpz.bak
src/: ResourceManager.h  config.h.in  ftl.cc
src/local/: Crew.cc  Crew.h  CrewMember.cc  CrewMember.h  HeadUpDisplay.cc  HeadUpDisplay.h  Messages.h  Params.h  Room.cc  Room.h  RoomManager.cc  RoomManager.h  Score.cc  Score.h  Ship.cc  Ship.h  Singletons.cc  Singletons.h  State.cc  State.h
